Fix and update propertites

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=Student
-spring.datasource.username=sa
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:mysql://student.arisee.com/student
+spring.datasource.username=students
+spring.datasource.password=students!@#$
+
 spring.jpa.show-sql=true
