--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:mysql://student.arisee.com/student
 spring.datasource.username=students
 spring.datasource.password=students!@#$
 
+server.port=8005
 spring.jpa.show-sql=true
