--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://student.arisee.com/student
+spring.datasource.url=jdbc:mysql://student.arisee.com:3306/student
 spring.datasource.username=students
 spring.datasource.password=students!@#$
 
