--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -9,6 +9,7 @@
     "@uirouter/angularjs": "^1.0.11",
     "angular": "^1.6.6",
     "angular-loading-bar": "^0.9.0",
+    "angular-sweetalert": "^1.1.2",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1"
