--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -12,6 +12,8 @@
     "angular-sweetalert": "^1.1.2",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "font-awesome": "FortAwesome/Font-Awesome",
+    "jquery": "^3.2.1",
+    "simple-line-icons": "^2.4.1"
   }
 }
